public/css/style.css
html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 60px;
  background-image: url("../brickwall.png");
  font-family: 'Playfair Display', serif;
}

.well {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  background-color: #f1f1f2;
}

.leftSide {
  flex-grow: 2;
}

rightSide {
  flex-grow: 1;
}

h3 {
  font-family: 'Playfair Display', serif;
  text-transform: uppercase;
  letter-spacing: 2px;
}

h4 {
  font-size: 1.6em;
  font-family: 'Playfair Display', serif;
  margin-top: 0px;
}

.flexForm {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.form-group {
  flex-grow: 1;
  margin: 10px;
}

.flexBtns {
  display: flex;
  flex-direction: row-reverse;
}

.container {
  display: flex;
  align-items: flex-end;
  flex-wrap: wrap;
}

.panel {
  margin-bottom: 5px;
  box-shadow: 0px 10px 15px rgba(0, 0, 0, .4);
}

.panel-title {
  font-size: 16pt;
  color: #fd5b1a;
  font-weight: bolder;
}

.panel-primary>.panel-heading {
  background-image: linear-gradient(white, #e2e2e2);
  border-color:#a7a7a7;
}

a {
  color: #fd5b1a;
}

.btn {
  width: 150px;
  margin: 10px;
}

.btn-danger {
  background-color: #a7a7a7;
  border-color: #878787;
}

.btn-danger:hover {
  background-color: #878787;
  border-color: #878787;
}

.btn-default {
  background-color: #fd5b1a;
  border-color: #df4c12;
}

.btn-primary {
  background-color: #fd5b1a;
  border-color: #df4c12;
}

.btn-default:hover {
  background-color: #df4c12;
  border-color: #df4c12;
}

.btn-primary:hover {
  background-color: #df4c12;
  border-color: #df4c12;
}

.panel-primary {
  border-color: #a7a7a7;
}

.form-control {
  border-color: #a7a7a7;
}

.titleImg {
  height: 75%;
  text-align: center;
}

.topHeader {
  height: 170px;
  background-color: #fd5b1a;
  background-image: url("../nyttitle.png"), url("../nytheader.png");
  background-repeat: no-repeat, no-repeat;
  background-size: contain, cover;
  background-position: center, center;
  box-shadow: 0px 45px 10px rgba(0, 0, 0, .5);
}

.pageTitle {
  position: relative;
  background-color: black;
  height: 36px;
  line-height: 36px;
  color: white;
  text-align: center;
  text-transform: uppercase;
  font-size: 16pt;
  letter-spacing: 3px;
}

.row {
  flex: 1 0 100%; /* make it wrap to its own line */
}

.gold {
  color: gold;
}

.quote {
  padding-top: 20px;
}

/* Shine */
.pageTitle:after {
	content:'';
  top:0;
	transform:translateX(100%);
	width:100%;
	height:36px;
	position: absolute;
	z-index:1;
	animation: slide 4s infinite;
	 
  /* 
  CSS Gradient - complete browser support from http://www.colorzilla.com/gradient-editor/ 
  */
  background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0.5) 50%, rgba(128,186,232,0) 99%, rgba(125,185,232,0) 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(255,255,255,0)), color-stop(50%,rgba(255,255,255,0.5)), color-stop(99%,rgba(128,186,232,0)), color-stop(100%,rgba(125,185,232,0))); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100%); /* IE10+ */
	background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0.5) 50%,rgba(128,186,232,0) 99%,rgba(125,185,232,0) 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#007db9e8',GradientType=1 ); /* IE6-9 */
}

/* animation */

@keyframes slide {
	0% {transform:translateX(-100%);}
	100% {transform:translateX(100%);}
}

@media screen and (max-width: 720px){

.well {
  flex-direction: column;
  align-items: flex-start;
}

.topHeader {
  height: 90px;
}

}

